[gd_scene load_steps=5 format=3 uid="uid://dhg6wi26ma3g3"]

[ext_resource type="Script" uid="uid://dn4bty2aeidc4" path="res://scripts/fish/Fish.gd" id="1_5fmmu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fmmu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5gex4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uh2ou"]

[node name="Fish" type="CharacterBody2D" groups=["fish"]]
collision_layer = 2
collision_mask = 37
script = ExtResource("1_5fmmu")

[node name="WanderArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WanderArea"]
shape = SubResource("RectangleShape2D_5fmmu")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 0.245578, 0.512775, 1)

[node name="StateMachine" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5gex4")

[node name="VisionCone" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionCone"]
shape = SubResource("CircleShape2D_uh2ou")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="FleeTimer" type="Timer" parent="."]

[node name="HideTimer" type="Timer" parent="."]
